--- a/resources/Page2.fxml
+++ b/resources/Page2.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="application.controller.Page2Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.Page2Controller">
    <children>
       <Button fx:id="StartGame" contentDisplay="CENTER" layoutX="300.0" layoutY="331.0" mnemonicParsing="false" onAction="#StartGame" prefHeight="49.0" prefWidth="155.0" text="Start Game">
          <font>
@@ -46,7 +45,7 @@
          </font>
       </Label>
       <ListView fx:id="PlayerList" layoutX="241.0" layoutY="60.0" prefHeight="258.0" prefWidth="271.0" />
-      <Label fx:id="Greeting" alignment="TOP_LEFT" layoutX="19.0" layoutY="138.0" prefHeight="141.0" prefWidth="148.0" text="Welcome, , ! " wrapText="true">
+      <Label fx:id="Greeting" alignment="TOP_LEFT" layoutX="19.0" layoutY="138.0" prefHeight="141.0" prefWidth="148.0" text="Welcome  ! " wrapText="true">
          <font>
             <Font size="11.0" />
          </font>
